[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/moving_platform.gd" type="Script" id=1]
[ext_resource path="res://sprites/metroid_tilesheet.png" type="Texture" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( 128, -32, 128, 32, -128, 32, -128, -32 )

[node name="moving_platform" type="Node2D"]

transform/pos = Vector2( 512, 320 )
script/script = ExtResource( 1 )
speed = 240
moving_to_first = true

[node name="platform" type="KinematicBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="platform"]

build_mode = 0
polygon = Vector2Array( -128, -32, -128, 32, 128, 32, 128, -32 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="Sprite" type="Sprite" parent="platform"]

texture = ExtResource( 2 )
region = true
region_rect = Rect2( 0, 384, 256, 64 )

[node name="first_point" type="Position2D" parent="."]

transform/pos = Vector2( -32, 0 )

[node name="second_point" type="Position2D" parent="."]

transform/pos = Vector2( 320, 0 )


