[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/moving_platform.gd" type="Script" id=1]
[ext_resource path="res://scripts/better_KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -96, -96, 96, -96, 96, 96, -96, 96 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 96, -104, 96, -96, -96, -96, -96, -104 )

[node name="moving_platform" type="Node2D"]

script/script = ExtResource( 1 )
speed = 60
active = true
stop_after_arrival = false
looping = false

[node name="platform" type="KinematicBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="platform"]

transform/scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="platform"]

build_mode = 0
polygon = Vector2Array( -96, -96, 96, -96, 96, 96, -96, 96 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="Area2D" type="Area2D" parent="platform"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="platform/Area2D"]

build_mode = 0
polygon = Vector2Array( -96, -104, -96, -96, 96, -96, 96, -104 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="point_1" type="Position2D" parent="."]

[node name="point_2" type="Position2D" parent="."]

[node name="wait_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="body_enter" from="platform/Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="platform/Area2D" to="." method="_on_Area2D_body_exit"]


